<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_nav_graph"
    app:startDestination="@+id/nav_weight">

    <fragment
        android:id="@+id/nav_weight"
        android:name="ru.rgt.unitconverter.ui.weight.WeightFragment"
        android:label="@string/title_weight"
        tools:layout="@layout/fragment_weight" >
        <action
            android:id="@+id/action_nav_weight_to_nav_distance"
            app:destination="@id/nav_distance" />
        <action
            android:id="@+id/action_nav_weight_to_nav_volume"
            app:destination="@id/nav_volume" />
    </fragment>

    <fragment
        android:id="@+id/nav_distance"
        android:name="ru.rgt.unitconverter.ui.distance.DistanceFragment"
        android:label="@string/title_distance"
        tools:layout="@layout/fragment_distance" >
        <action
            android:id="@+id/action_nav_distance_to_nav_volume"
            app:destination="@id/nav_volume" />
        <action
            android:id="@+id/action_nav_distance_to_nav_weight"
            app:destination="@id/nav_weight" />
    </fragment>

    <fragment
        android:id="@+id/nav_volume"
        android:name="ru.rgt.unitconverter.ui.volume.VolumeFragment"
        android:label="@string/title_volume"
        tools:layout="@layout/fragment_volume" >
        <action
            android:id="@+id/action_nav_volume_to_nav_weight"
            app:destination="@id/nav_weight" />
        <action
            android:id="@+id/action_nav_volume_to_nav_distance"
            app:destination="@id/nav_distance" />
    </fragment>
</navigation>